0.0.16 (not released yet)
- feature: shortcut 'l' to show statistics about tags

0.0.15
- feature: when downloading a paper also extract the abstract (only for arxiv and openreview)
- feature: shortcut 'y' to show all information about a paper
- feature: shortcut 'a' to show the abstract of a paper (only when abstract was extracted during download)
- intern: store URL to paper in repository

0.0.14
- ask for the title when directly downloading a PDF and title is not given

0.0.13
- feature: import list of URLs via "fetch --urls <filename>"
- bugfix : fixed a stacktrace when invalid key was pressed
- bugfix : fixed layout issues after editing tags and notes

0.0.12
- bugfix : fetch didn't download a PDF into the default repository
- intern : old database is automatically upgraded
- feature: set "unread" tag when fetching a paper
- feature: set stars